# llm_debator

./: README.md  clients.py  main.py  model_conversation.py  model_debate.py  model_debator.py  pyproject.toml  requirements.txt
experimentations/: conversational_requests.ipynb  gradio_tests.ipynb  model_conversation_test.ipynb  model_debate_test.ipynb  simple_requests.ipynb
