[project]
name = "llm-debator"
version = "0.1.0"
description = "AI debate interface powered by multiple LLM providers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=5.49.1",
    "openai>=2.6.1",
    "python-dotenv>=1.0",
    "uvicorn[standard]>=0.40",
    "fastapi>=0.128.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.0",
    "ipython>=8.0",
]

[tool.uv]
package = false
